--- a/index.html
+++ b/index.html
@@ -8,29 +8,17 @@
 
 <body>
 
-    <h1>TEMA 1</h1>
+    <h1>TEMA 2</h1>
     <p>Gabriel Butuza</p>
 
-    <div class="center">
-        <p>Prima mea pagina</p>
-    </div>
-    <div>
-        <p>Culoarea mea preferata este <span class="fColor">albastru</span>.</p>
-    </div>
+    <canvas id="canvasId" width="604px" height="400px"></canvas>
 
     <div>
-        <canvas id="myCanvas">
-        </canvas>
+        <button id="btn" class="float-left submit-button">Draw square page</button>
     </div>
 
 
-    <div class="picture">
-        <p>Animalul preferat: </p>
-        <img src="https://cdn.pixabay.com/photo/2019/08/19/07/45/dog-4415649_960_720.jpg" alt="Animalul favorit">
-    </div>
-
-
-    <script src="main.js"></script>
+    <script src="main.js" type="module"></script>
 </body>
 
 </html>
