--- a/index.html
+++ b/index.html
@@ -1,24 +1,56 @@
-<!DOCTYPE html>
 <html>
 
 <head>
-    <title>Diamond Gatherer</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Page Title</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
+    <!-- IMAGES -->
+    <img src="assets/map.png" class="display-none" id="map-image">
+    <img src="assets/space-ranger-player.png" class="display-none" id="space-ranger" />
+    <img src="assets/pink-lady-player.png" class="display-none" id="pink-lady" />
 
-    <h1>TEMA 2</h1>
-    <p>Gabriel Butuza</p>
-
-    <canvas id="canvasId" width="604px" height="400px"></canvas>
-
-    <div>
-        <button id="btn" class="float-left submit-button">Draw square page</button>
+    <!-- MENU -->
+    <div id="menu">
+        <div id="join-chat">
+            <input type="text" id="input-name" placeholder="Enter your name...">
+            <button type="button" id="join-btn">Join</button>
+            <label class="display-none" id="input-error">Please enter your name to join chat!</lable>
+        </div>
+        <div id='create-game-container'>
+            <input id='game-name-input' type='text' placeholder='Enter the game name' />
+            <button id='create-game-button'>Create Game!</button>
+            <label id='game-name-missing' class='display-none'>Please enter a name to create a new game!</lable>
+        </div>
+        <div id="game-list"></div>
     </div>
+    <!-- CHAT -->
+    <div id="chat-container" class="display-none">
+        <div id="onlineUsers"></div>
+        <div id="chat-messages">
+
+        </div>
+        <input type="text" id="input-message" placeholder="Your message...">
+        <button type="button" id="message-btn">Send</button>
+        <input type="color" id="msg-color" name="color"
+            value="#000000">
+        <label for="color">Message Color</label>
+            <br>
+            <button type="button" id="leave-btn">Leave</button>
+        </div>
+
+        <!-- GAME -->
+        <div id="game-container" class="display-none">
+            <canvas id="game-canvas" width="960" height="640"></canvas>
+            <button type="button" id="back-to-menu">Back to menu</button>
+        </div>
 
 
-    <script src="main.js" type="module"></script>
+        <script src="/socket.io/socket.io.js"></script>
+        <script src="/js/jquery-3.5.1.min.js"></script>
+        <script src="/js/inheritance.js" type="module"></script>
+        <script src="/js/main.js" type="module"></script>
 </body>
 
 </html>
